--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/project_musicPlay?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=12345678hH@
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.hibernate.ddl-auto=update
+
+
+cloudinary.cloud-name=dultx7bn7
+cloudinary.api-key=952985858398759
+cloudinary.api-secret=XqyaWI96_FeUd26ObVJqnL1Ngns
+
+
+
+# application.properties
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+
 
