--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/project_musicPlay?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/project_musicplay?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=12345678hH@
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.hibernate.ddl-auto=update
-
-#spring.datasource.url=jdbc:postgresql://rain.db.elephantsql.com:5432/gfbyqunv?useSSL=false
-#spring.datasource.username=gfbyqunv
-#spring.datasource.password=2JDrJHI-NKdU4xVgB4MB5xw-r4gcM7uN
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.hibernate.ddl-auto=update
-
 
 cloudinary.cloud-name=dultx7bn7
 cloudinary.api-key=952985858398759
